- target_timeout should work with skills like Kyrie Eleison now. (The problem
  was it says "<target> uses Kyrie Eleison on self", instead of "You use Kyrie
  Eleison on <target>". It now recognizes the former when setting timeouts)
- The Wx interface can now correctly launch a browser on Linux.
- Fix display of map name in config.txt chat entries.
- Sell all items at once instead of just 8 at a time.
- skillsAddAuto was waiting a long time to add the next skill point.

New features:
- Don't use teleportAuto_minAggressives if the more specific
  teleportAuto_minAggressivesInLock is specified.
- Don't use teleportAuto_maxDmg if the more specific
  teleportAuto_maxDmgInLock is specified.

New config options:
- showDomain, if set to 1 will display domains along with messages.

Credits:
- jsteng: VVVS weapon name bugfix.
- arachno: Language code bugfix, chat.txt map name bugfix.

==================
### 1.5.2 (beta)
==================

** INCOMPATIBLE CHANGES **:
- For users of teleportAuto_search, in order to have it work you must now:
  * Set teleportAuto_idle to 1
  * Set ai_teleport_idle in timeouts.txt to the same as ai_teleport_search
  * Delete ai_teleport_search in timeouts.txt (it is obsolete)
  * Set route_randomWalk to 0
- If you have been using "maxUses" to limit the number of times you attempt to
  cast a skill, you may have to change it to "maxAttempts" instead.
- Kobolds have been renamed from Kobold # to Kobold-#.
  Many people don't know about using tabs in mon_control.txt, and
  would probably have problems figuring out what to do for Kobolds.
  Example: Kobold 1 is now Kobold-1


Bug fixes:
- Correctly detect pets.
- Fix all kinds of troubles regarding sitting and standing.
- Set maxDistance = distance (instead of defaulting to 30) in attackSkillSlot.
- The 'conf' chat command now works.
- partyAggressives now counts monsters your party attacked
- Fixed some cases of ksPlayers not working